Most of VM changes in place

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -143,10 +143,10 @@
   \item[$\mathcal{T}$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
   \item[$\mathcal{U}(\dots)$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
   \item[$\mathcal{V}(\dots)$] The range, or set of values, of a dictionary or sequence. See section \ref{sec:dictionaries}.
-%  \item[$\mathcal{W}$] Unused.
-%  \item[$\mathcal{X}$] Unused.
+  \item[$\mathcal{W}_n(\dots)$] The into-signed function for a value in $\N_{2^{8n}}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
+  %  \item[$\mathcal{X}$] Unused.
   \item[$\mathcal{Y}(\dots)$] The alias/output/entropy function of a Bandersnatch \textsc{vrf} signature/proof. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-  \item[$\mathcal{Z}_n(\dots)$] The into-signed function for a value in $\N_{2^{8n}}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
+  \item[$\mathcal{Z}$] The Zigzag encoding function. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:zigzag}.
   \item[$\wp(\dots)$] Power set function.
 \end{description}
 
