--- a/text/previous_work.tex
+++ b/text/previous_work.tex
@@ -44,7 +44,7 @@ Real-world examples exist of the pit of centralization giving rise to monopolies
 
 It has yet to be demonstrated that \textsc{snark}-based strategies for eliminating the trust from computation will ever be able to compete on a cost-basis with a multi-party crypto-economic platform. All as-yet proposed \textsc{snark}-based solutions are heavily reliant on crypto-economic systems to frame them and work around their issues. Data availability and sequencing are two areas well understood as requiring a crypto-economic solution.
 
-We would note that \textsc{snark} technology is improving and the cryptographers and engineers behind them do expect improvements in the coming years. In a recent article by \cite{thaler2023technical} we see some credible speculation that with some recent advancements in cryptographic techniques, slowdowns for proof generation could be as little as 50,000x from regular native execution and much of this could be parallelized. This is substantially better than the present situation, but still several orders of magnitude greater than would be required to compete on a cost-basis with established crypto-economic techniques such as \textsc{elves}.
+We would note that \textsc{snark} technology is improving and the cryptographers and engineers behind them do expect improvements in the coming years. In a recent article by \cite{thaler2023technical} we see some credible speculation that with some recent advancements in cryptographic techniques, slowdowns for proof generation could be as little as 50,000x from regular native execution and much of this could be parallelized. This is substantially better than the present situation, but still several orders of magnitude greater than would be required to compete on a cost-basis with established crypto-economic techniques such as \textsc{Elves}.
 
 \subsection{Fragmented Meta-Networks}
 
@@ -68,7 +68,7 @@ Alternatively, as in \textsc{Elves} by \cite{stewart2018efficient}, we may utili
 
 Another trend in the recent years of blockchain development has been to make ``tactical'' optimizations over data throughput by limiting the validator set size or diversity, focusing on software optimizations, requiring a higher degree of coherency between validators, onerous requirements on the hardware which validators must have, or limiting data availability.
 
-The Solana blockchain is underpinned by technology introduced by \cite{yakovenko2018solana} and boasts theoretical figures of over 700,000 transactions per second, though according to \cite{ng2024is} the network is only seen processing a small fraction of this. The underlying throughput is still substantially more than most blockchain networks and is owed to various engineering optimizations in favor of maximizing synchronous performance. The result is a highly-coherent smart-contract environment with an \textsc{api} not unlike that of \emph{YP} Ethereum (albeit using a different underlying VM), but with a near-instant time to inclusion and finality which is taken to be immediate upon inclusion.
+The Solana blockchain is underpinned by technology introduced by \cite{yakovenko2018solana} and boasts theoretical figures of over 700,000 transactions per second, though according to \cite{ng2024is} the network is only seen processing a small fraction of this. The underlying throughput is still substantially more than most blockchain networks and is owed to various engineering optimizations in favor of maximizing synchronous performance. The result is a highly-coherent smart-contract environment with an \textsc{api} not unlike that of \emph{YP} Ethereum (albeit using a different underlying \textsc{vm}), but with a near-instant time to inclusion and finality which is taken to be immediate upon inclusion.
 
 Two issues arise with such an approach: firstly, defining the protocol as the outcome of a heavily optimized codebase creates structural centralization and can undermine resilience. \cite{jha2024solana} writes ``since January 2022, 11 significant outages gave rise to 15 days in which major or partial outages were experienced''. This is an outlier within the major blockchains as the vast majority of major chains have no downtime. There are various causes to this downtime, but they are generally due to bugs found in various subsystems.
 
